syntax="proto3";

package join_request;


message JoinRequest {

  string github_username = 1;

}


message JoinResponse {

  string join_response = 1;

}


service UserJoinService {

  rpc UserJoin(JoinRequest) returns (JoinResponse);

}